<resources>
    <string name="app_name">ChatZone</string>
    <string name="cap_app_name">CHATZONE</string>
    <string name="Verify">Verify</string>
    <string name="tab01">Chats</string>
    <string name="tab02">Friends</string>
    <string name="UN">Username</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="pwd02">Confirm Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Exception">Already have account ?</string>
    <string name="Sign_In">Sign In</string>
    <string name="Back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>